src/css/timeline.css
@reference './index.css';

/* Layout classes */
.timeline-layout {
    @apply grid grid-cols-min-max gap-4 md:gap-8 overflow-hidden;
    @apply p-4 md:p-8 pt-0 md:pt-0;
}

.timeline-empty {
    @apply text-center text-lg p-4 mb-4 mx-4 md:mb-8 md:mx-8;
}

.month-divider {
    @apply divider col-span-2 mt-4 mb-0 font-bold md:text-lg scroll-mt-35;
}

.timeline-timestamp {
    @apply flex flex-col h-full justify-center;
    @apply text-end whitespace-nowrap md:ml-4 scroll-mt-35;

    /* Show tooltip if full date is hidden (timelineFullDate setting = False) */
    &:has(> span.hidden) > .tooltip::before {
        /* Mobile layout: Move closer to relative date */
        @apply max-[767px]:bottom-6;
        /* Desktop layout: Align to end of relative date, move less close */
        @apply md:ml-2 md:bottom-8
    }

    /* Hide tooltip if full date is visible (timelineFullDate setting = True) */
    &:has(> span.block) > .tooltip::before {
        @apply hidden;
    }

    /* Hide tooltip arrow */
    & > .tooltip::after {
        @apply !hidden;
    }
}

.timeline-day {
    @apply flex flex-col bg-neutral rounded-xl p-2 md:p-4 min-w-0;
}

.timeline-day-events {
    /* Very small screens: column of event markers */
    @apply flex flex-col;
    /* Most mobile devices: 2x2 grid layout */
    @apply min-[372px]:grid min-[372px]:grid-cols-min-max;
    /* Desktop, tablets: Flex wrap (starts when room for 3 events per row) */
    @apply min-[461px]:flex min-[461px]:flex-row min-[461px]:flex-wrap;
}

/* Timeline content classes */
.event-marker {
    @apply p-2 whitespace-nowrap text-sm md:text-base;
    /* Transparent outline when not selected (necessary for transition) */
    @apply outline-transparent outline-2 -outline-offset-4 rounded-xl;
    @apply transition duration-150;

    & > .event-marker-content {
        @apply inline-block transition-all duration-150 ease-linear;
        /* Allow clicking rapidly without selecting text */
        @apply select-none;

        /* Fix text shifting on chromium (doesn't work on firefox) */
        will-change: transform;

        /* Fix blurry scaled down text on firefox (doesn't work on chromium) */
        text-rendering: optimizeLegibility;
    }

    /* Red outline when selected */
    &.selected {
        @apply outline-error;
    }

    /* Scale down contents when selected */
    &.selected > .event-marker-content {
        @apply scale-90;
    }

    /* Tooltip (event timestamps) */
    &::before {
        @apply max-w-fit;
    }
    &::before, &::after {
        @apply bg-base-300 translate-y-3 md:translate-y-2;
    }
}

.note-collapse-wrapper {
    /* Transparent outline when not selected (necessary for transition) */
    @apply outline-transparent outline-2 -outline-offset-6 rounded-xl;
    @apply transition duration-150 w-fit;

    /* Red outline when selected */
    &.selected {
        @apply outline-error;
    }

    /* Scale down contents when selected */
    &.selected > * {
        @apply scale-92 ml-3 mr-1 md:scale-95 md:ml-4 md:mr-0;
    }
}

.note-collapse {
    @apply m-2 flex flex-row origin-left;
    transition: max-height .3s ease-in-out,
                margin .15s ease-in-out,
                scale .15s ease-in-out;
}

.note-collapse-text {
    @apply text-sm md:text-base mr-2 after:content-['\200B'];
}

.timeline-day-photos {
    /* Small screens: 2x2 grid, photos take 50% width */
    /* Max photo width before next breakpoint: 120px */
    @apply grid grid-cols-2 gap-4 m-2;
    /* 3 columns once wide enough for 3 event-marker per row */
    @apply min-[461px]:grid-cols-3;
    /* Increase to 4 columns when photos reach 120px again */
    @apply min-[592px]:grid-cols-4;
    /* Only show 5 columns on desktop */
    @apply xl:grid-cols-5;

    /* Don't increase space between events and notes when empty */
    &:empty {
        @apply m-0;
    }
}

.photo-thumbnail-timeline {
    @apply w-full aspect-square scroll-mt-35;
    /* Transparent outline when not selected (necessary for transition) */
    @apply outline-transparent outline-2 outline-offset-2 rounded-lg;
    @apply transition-all duration-150;
    /* Allow clicking rapidly without highlighting photo */
    @apply select-none;

    & > img {
        @apply transition-transform duration-150;
    }

    /* Red outline when selected */
    &.selected {
        @apply outline-error;
    }

    /* Scale down thumbnail when selected */
    &.selected > img {
        @apply scale-90;
    }
}

/* Plant divided into list bullet points */
.bullet-point {
    @apply size-[5px] min-size-[5px] rounded-full bg-base-content;
}

/* Plant divided from/into links */
.plant-link {
    @apply font-semibold underline;
}

